changeset:   3492:b8b1a0305bed
user:        Luis Falcon <falcon@gnuhealth.org>
date:        Mon Dec 02 17:47:27 2019 +0000
summary:     gnuhealth GTK client: Revert to traditional API to read related fields for performance optimization

changeset:   3491:d3d4a9d25337
parent:      3489:e4f9f3205785
user:        Luis Falcon <falcon@gnuhealth.org>
date:        Sun Dec 01 13:13:30 2019 +0000
summary:     GNU Health GTK Client : Update documentation

changeset:   3488:54adb0f36d0b
tag:         tip
user:        Luis Falcon <falcon@gnuhealth.org>
date:        Sat Nov 30 17:49:36 2019 +0000
summary:     GNU Health GTK Client . Apply Tryton patch 6571. Guess encoding when sending bytes to a Char widget

changeset:   3487:c2287c30f36c
user:        Luis Falcon <falcon@gnuhealth.org>
date:        Sat Nov 30 17:48:20 2019 +0000
summary:     GNU Health GTK Client . Apply Tryton patch 6569. Manage cancelling FileChooser in the Binary

changeset:   3486:06395a422358
user:        Luis Falcon <falcon@gnuhealth.org>
date:        Sat Nov 30 17:45:57 2019 +0000
summary:     GNU Health GTK Client . Apply Tryton patch 6567. Set alignment on widget and do not override with [x,y]fill

changeset:   3485:3644018dbb3a
user:        Luis Falcon <falcon@gnuhealth.org>
date:        Sat Nov 30 17:40:59 2019 +0000
summary:     GNU Health GTK Client . Apply Tryton patch 6564. Convert to float when parsing timedelta

changeset:   3484:82168806a0f3
user:        Luis Falcon <falcon@gnuhealth.org>
date:        Sat Nov 30 17:38:24 2019 +0000
summary:     GNU Health GTK Client . Apply Tryton patch 6532. Always delete One2Many record when add_remove attribute is not set

changeset:   3483:e3a36c5b3801
user:        Luis Falcon <falcon@gnuhealth.org>
date:        Sat Nov 30 17:36:30 2019 +0000
summary:     GNU Health GTK Client . Apply Tryton patch 6527. Do not fail when get_visible_range return None

changeset:   3482:9302814a8776
user:        Luis Falcon <falcon@gnuhealth.org>