@@ -1,6 +1,6 @@
 # This file is part of GNU Health.  The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
-__version__ = "3.6.3"
+__version__ = "3.6.5"
 SERVER_VERSION = "5.0.0"
 import gi
 
