@@ -1,3 +1,13 @@
+changeset:   3501:6f9accf1d2d8
+user:        Luis Falcon <falcon@gnuhealth.org>
+date:        Thu Dec 12 10:53:12 2019 +0000
+summary:     GTK Client: Fix variable name to values
+
+changeset:   3498:08f336205763
+user:        Luis Falcon <falcon@gnuhealth.org>
+date:        Fri Dec 06 22:12:03 2019 +0000
+summary:     gnuhealth GTK client: Fix bug  #57371  Error when assigning a health professional on the work schedule
+
 changeset:   3492:b8b1a0305bed
 user:        Luis Falcon <falcon@gnuhealth.org>
 date:        Mon Dec 02 17:47:27 2019 +0000
